--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JavaScript Lab</title>
-</head>
-<body>
-  hello
-</body>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>House of Cards</title>
+  </head>
+
+  <body>
+    <header>
+      <h1>Flatiron Card Table</h1>
+    </header>
+    <main>
+      <button id="deal">Deal Card</button>
+      <section>
+
+      </section>
+    </main>
+    <script src="index.js"></script>
+  </body>
+
 </html>
